tests/rosetta/out/Zig/21-game.error
zig build: exit status 1
/tmp/21-game.zig:65:8: error: expected 'while', 'for', 'inline', or '{', found 'an identifier'
